--- a/doc/po/dbd.1.md.ja.po
+++ b/doc/po/dbd.1.md.ja.po
@@ -2,7 +2,7 @@
 # Netatalk ドキュメントの日本語訳
 # Copyright (C) 2015-2017 Eiichirou UDA
 # Copyright (C) 2015-2017 HAT <hat@fa2.so-net.ne.jp>
-# Copyright (C) 2024-2025 Daniel Markstedt <daniel@mindani.net>
+# Copyright (C) 2024-2026 Daniel Markstedt <daniel@mindani.net>
 # This file is distributed under the same license as the Netatalk package.
 #
 msgid ""
@@ -173,7 +173,7 @@ msgstr "dbd — CNID データベース保守ユーティリティ"
 #: manpages/man1/dbd.1.md:8
 #, no-wrap
 msgid "**dbd** [-cfFstuv] [*volumepath*]\n"
-msgstr ""
+msgstr "**dbd** [-cfFstuv] [*ボリュームパス*]\n"
 
 #. type: Plain text
 #: manpages/man1/dbd.1.md:10
